Finally fixed the episode watch page, added an episode list, and fixed up a few styles(making `text-overflow` global).

--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -13,3 +13,9 @@ body {
 .art-contextmenus {
   display: none !important;
 }
+
+.text-overflow {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
